# ex-boost

./: .gitignore  CMakeLists.txt  Makefile  README.md
python/: CMakeLists.txt  README.md
python/01_Embed_GetInt/: CMakeLists.txt  main.cpp  main.py
python/02_Embed_GetList/: CMakeLists.txt  main.cpp  main.py
python/cmake/: addTest.cmake  findBoost.cmake  findPython.cmake  findQt5.cmake  useBoost.cmake  usePython.cmake  useQt5.cmake
