cmake_minimum_required(VERSION 2.8)
project("python")
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
set(CMAKE_INCLUDE_CURRENT_DIR_IN_INTERFACE ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_BUILD_TYPE "RELEASE")
enable_testing()
include(findBoost)
include(findPython)
include(findQt5)
add_subdirectory(01_Embed_GetInt)
add_subdirectory(02_Embed_GetList)